[package]
name = "dna"
version = "0.1.0"
authors = ["K Rhoda <kelseydrhoda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
monomer = { path = "../monomer" }
polymer = { path = "../polymer" }
category = { path = "../category" }
once_mono = { path = "../once_mono" }
quartz = { path = "../../quartz" }
enum-display-derive = "0.1.0"