[package]
name = "once_mono"
version = "0.1.0"
authors = ["K Rhoda <kelseydrhoda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
monomer = { path = "../monomer" }
once_cell = { path = "../../quartz/once_cell" }
